# poly

./: .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.txt  install.sh  poly  pyproject.toml  requirements.txt
src/poly/: main.py
